--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>FCC: Survey</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Courgette|Merienda:400,700" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -36,39 +37,47 @@
             </select>
 
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                <label class="form-check-label" for="defaultCheck1">
-                    Default checkbox
+                <label id="checkLabel" class="form-text">Used technologies</label>
+                <input class="form-check-input" type="checkbox" value="" id="check1">
+                <label class="form-check-label" for="check1">
+                    Bootstrap
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck2" disabled>
-                <label class="form-check-label" for="defaultCheck2">
-                    Disabled checkbox
+                <input class="form-check-input" type="checkbox" value="" id="check2">
+                <label class="form-check-label" for="check2">
+                    Angular
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="check3">
+                <label class="form-check-label" for="check3">
+                    React
                 </label>
             </div>
 
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                <label class="form-check-label" for="exampleRadios1">
-                    Default radio
+                <label id="radioLabel" class="form-text">Platform & Language</label>
+                <input class="form-check-input" type="radio" name="radios" id="radios1" value="option1" checked>
+                <label class="form-check-label" for="radios1">
+                    WordPress & PHP
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                <label class="form-check-label" for="exampleRadios2">
-                    Second default radio
+                <input class="form-check-input" type="radio" name="radios" id="radios2" value="option2">
+                <label class="form-check-label" for="radios2">
+                    Java
                 </label>
             </div>
-            <div class="form-check disabled">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" disabled>
-                <label class="form-check-label" for="exampleRadios3">
-                    Disabled radio
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="radios" id="radios3" value="option3">
+                <label class="form-check-label" for="radios3">
+                    ASP.NET
                 </label>
             </div>
 
-            <div class="form-group">
-                <label for="textarea">Example textarea</label>
+            <div class="form-group textarea">
+                <label for="textarea">Your message</label>
                 <textarea class="form-control" id="textarea" rows="3"></textarea>
             </div>
 
